# hoverboard

./: .gitignore  LICENSE.txt  README.rst  setup.cfg
examples/: avrdude.py
src/hoverboard/: __main__.py  errors.py
src/hoverboard/boards/: __init__.py  board.py
src/hoverboard/boards/avrdude/: avrdude.py
src/hoverboard/programmers/: __init__.py
src/hoverboard/programmers/avrdude/: __init__.py  avrdude.py
src/hoverboard/stores/: __init__.py  default_store.py  store.py  web_store.py
src/hoverboard/toolchains/: __init__.py  errors.py  factory.py  installation_database.py  store.py  toolchain.py  typing.py
src/hoverboard/toolchains/avrdude/: __init__.py  avrdude.py
src/hoverboard/tools/: __init__.py  arguments.py  errors.py  local_tool.py  search_path.py  store.py  tool.py  zip7.py
src/hoverboard/types/: __init__.py  hierarchy_mapping.py  object_factory.py
tests/: __init__.py  test_install.py
