[metadata]
name=hoverboard
version = attr: hoverboard.__version__
author = Yossi Rosilio
author_email = yossirozolyoo@hotmail.com
description = Hardware manipulation library
long_description = file: README.rst, LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Topic :: System :: Hardware
license = MIT
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:
install_requires =
    requests

[options.packages.find]
where=src
